[package]
name = "sileo"
version = "0.1.0"
authors = ["Raphael Tang <raphpb1912@gmail.com>"]
edition = "2018"
description = "Privacy-focused secure file encryption"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libflate = "1"
tar = "0.4"
walkdir = "2"
clap-v3 = "3.0.0-beta.1"
once_cell = "1.5.2"
dirs = "3"
chrono = "0.4"
fern = { version = "0.6", features = ["colored"] }
log = "0.4"
md5 = "0.7"
age = { git = "https://github.com/str4d/rage.git" }
secrecy = "0.7.0"
dialoguer = "0.7.1"